--- a/static/global.css
+++ b/static/global.css
@@ -14,7 +14,7 @@ h2 {
 h3 {
     color:grey;
     margin-bottom: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 pre {
@@ -27,11 +27,17 @@ img {
     margin-right: auto;
     width: 50%;
     box-shadow: 0px 3px 15px rgba(0,0,0, 0.8);
+    border-radius: 5px;
 }
 
 p {
     padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 20px;
+    margin-top: 20px;
 
+}
+
+li {
+    list-style-type: disc;
 }
